Styling fixes, wrapping Years in a Plan object

--- a/src/styles/objects.Term.scss
+++ b/src/styles/objects.Term.scss
@@ -2,7 +2,6 @@
 @import 'settings.colors.scss';
 
 .term {
-  float: left;
   text-align: center;
   width: $term-box-width;
   padding-bottom: $term-box-spacing;
