--- a/src/styles/settings.constants.scss
+++ b/src/styles/settings.constants.scss
@@ -18,3 +18,5 @@ $course-box-font-color: #FFFFFF;
 $term-box-width: 100px;
 $term-credits-font-size: 8pt;
 $term-box-spacing: 8px;
+
+$year-box-height: $course-box-height * 3 + 162px;
